# libgde2weather

./: AUTHORS  COPYING  Makefile.am  NEWS.GNOME  README  autogen.sh  configure.ac
.tx/: config
data/: Locations.xml.in  Makefile.am  README  locations.dtd
doc/: Makefile.am  libgde2weather-docs.sgml  libgde2weather-sections.txt  libgde2weather.types
icons/: Makefile.am  moonshadow.pl
libgde2weather/: AUTHORS  Makefile.am  gde2weather-enum-types.c.tmpl  gde2weather-enum-types.h.tmpl  gde2weather-location.c  gde2weather-location.h  gde2weather-prefs.c  gde2weather-prefs.h  gde2weather-timezone.c  gde2weather-timezone.h  gde2weather-uninstalled.pc.in  gde2weather-xml.c  gde2weather-xml.h  gde2weather.pc.in  location-entry.c  location-entry.h  org.gde2.weather.gschema.xml.in  parser.c  parser.h  test_locations.c  test_metar.c  test_sun_moon.c  timezone-menu.c  timezone-menu.h  weather-bom.c  weather-iwin.c  weather-met.c  weather-metar.c  weather-moon.c  weather-priv.h  weather-sun.c  weather-wx.c  weather.c  weather.h
po/: POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_NI.po  es_PA.po  es_PE.po  es_PR.po  (+71 more)
po-locations/: README.translators  ang.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  extract.xsl  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  (+37 more)
python/: Makefile.am  bad__init__.py  demo.py  gde2weather.defs  gde2weather.override  gde2weathermodule.c
